<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SMPTE_TimeController_Source" Id="{ab4e1c3b-8127-4201-a098-8466396e0bcc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SMPTE_TimeController_Source :
(
	NT_Time := 0,
	DC_Time := 1,
	ExtTimeProvider := 2
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>